--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,12 @@ body {
   font-family: var(--font-sans);
   color: black;
 }
+
+@utility scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
