--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
 
-@theme {
-  --font-sans: "EB Garamond", sans-serif;
+
+:root {
+  --font-roboto: 'Roboto', sans-serif;
 }
 
-/* Apply the font to the whole website */
+/* .font-roboto {
+  font-family: var(--font-roboto);
+} */
+
+
 body {
-  font-family: var(--font-sans);
+  font-family: var(--font-roboto);
   color: black;
 }
+
 
 @utility scrollbar-none {
   -ms-overflow-style: none;
